--- a/underdevelopment.html
+++ b/underdevelopment.html
@@ -26,7 +26,7 @@
     <script>
       function redirectToMainPage() {
         setTimeout(function() {
-          window.location.href = "./index.html";
+          window.location.href = "../";
         }, 3000);
       }
     </script>
